<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".login_activity">

    <!--Email Entry Field-->
    <LinearLayout
        android:id="@+id/pass_layout"
        android:layout_width="295dp"
        android:layout_height="47dp"
        android:layout_marginBottom="34dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/field"
        android:orientation="horizontal"

        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_layout">

        <ImageView
            android:id="@+id/pass_icon"
            android:layout_width="16dp"
            android:layout_height="25dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:contentDescription="@string/todo"
            android:cropToPadding="false"
            app:srcCompat="@drawable/pass_icon" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="0dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/background_light"
            android:textColorHint="#9a9696"
            android:textSize="16sp" />
    </LinearLayout>

    <!--Welcome logo / Title of the screen-->
    <ImageView
        android:id="@+id/pa"
        android:layout_width="295dp"
        android:layout_height="167dp"
        android:layout_marginBottom="316dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311"
        app:srcCompat="@drawable/title"
        android:contentDescription="@string/todo" />

    <!--Password Field-->
    <LinearLayout
        android:id="@+id/mail_layout"
        android:layout_width="295dp"
        android:layout_height="47dp"
        android:layout_marginBottom="304dp"
        android:background="@drawable/field"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/mail_icon"
            android:layout_width="16dp"
            android:layout_height="17dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="13dp"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:contentDescription="@string/todo"
            android:cropToPadding="false"
            android:textColorHint="#e6e5e5"
            app:srcCompat="@drawable/mail_icon" />

        <EditText
            android:id="@+id/login_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"
            android:textColor="@android:color/background_light"
            android:textColorHint="#9a9696"
            android:textSize="16sp" />
    </LinearLayout>
<!--Login Button-->
    <Button
        android:id="@+id/login_button"
        android:layout_width="295dp"
        android:layout_height="47dp"
        android:layout_marginBottom="143dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login"
        android:elevation="0dp"

        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/login_btnn"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="#292727"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_layout" />

    <TextView
        android:id="@+id/login_register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="126dp"
        android:fontFamily="@font/averia_libre"
        android:text="@string/create_new_account"
        android:textAllCaps="false"
        android:textColor="@color/bottom_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/fogot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:layout_marginTop="14dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/darker_gray"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/login_register_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

</android.support.constraint.ConstraintLayout>